==> Ai-Thinker-Open/aithinker_dev_open_sdk/adt/adt_os/adapter_chip/chip/port/rtl8711fx/ble/aiio_ble.c <==
#include "aiio_ble.h"
#include "aiio_os_port.h"
#include "aiio_log.h"
#include <string.h>
#include <stdio.h>
#include <osif.h>
#include <bt_api_config.h>
#include <rtk_bt_def.h>
#include <rtk_bt_common.h>
#include <rtk_bt_device.h>
#include "rtk_bt_vendor.h"
#include <rtk_bt_gap.h>
#include <rtk_bt_le_gap.h>
#include <rtk_bt_att_defs.h>
#include <rtk_bt_gatts.h>
#include <rtk_bt_gattc.h>
#include <bt_utils.h>
#define SIMPLE_BLE_UUID_EMPTY 0x0000
#define RTK_BT_UUID_BLE_EMPTY BT_UUID_DECLARE_16(SIMPLE_BLE_UUID_EMPTY)
#define BLE_DEF_SRV_ID_1 0
#define BLE_DEF_SRV_ID_2 1
#define BLE_CLIENT_PROFILE_ID 0
#define BLE_DEF_SERVER_TX_INDEX 2
#define BLE_DEF_SERVER_TX_CCD_INDEX 3
#define BLE_DEF_SERVER_RX_INDEX 5
#define BLE_BLUFI_SERVER_TX_INDEX 4
#define BLE_BLUFI_SERVER_TX_CCD_INDEX 5
#define BLE_BLUFI_SERVER_RX_INDEX 2

static int ble_notify_data(void *conn, ble_gatts_attr_t *attr, uint8_t *data, uint16_t length, uint8_t type)
{
    int ret;
    uint16_t mtu;
    uint16_t offset;
    uint16_t send_len;
    rtk_bt_gatts_ntf_and_ind_param_t ntf_param = {0};

    offset = 0;
    if (rtk_bt_le_gap_get_mtu_size(conn, &mtu) != 0)
    {
        return AIIO_ERROR;
    }

    mtu -= 3;
    while (length > 0) {
        /* calculate send_len */
        send_len = length > mtu ? mtu : length;
        /* send data */
        ntf_param.conn_handle = conn;
        ntf_param.app_id = attr->srv_id;
        ntf_param.index = attr->attr_index;
        ntf_param.data = data + offset;
        ntf_param.len = send_len;
        if (type == 0) {
            ret = rtk_bt_gatts_notify(&ntf_param);
        } else {
            ret = rtk_bt_gatts_indicate(&ntf_param);
        }
        /* set offset */
        offset += send_len;
        length -= send_len;

        if (RTK_BT_OK != ret) {
            BT_LOGA("GATTS notify failed! err: 0x%x\r\n", ret);
            return AIIO_ERROR;
        }
    }

    return AIIO_OK;
}

aiio_err_t aiio_ble_init(aiio_ble_mode_t mode, const aiio_ble_config_t *config)
{
    memcpy(&ble_config_s, config, sizeof ble_config_s);

    ble_mode = mode;

    rtk_bt_app_conf_t bt_app_conf = {0};
    rtk_bt_le_addr_t bd_addr = {(rtk_bt_le_addr_type_t)0, {0}};
    char addr_str[30] = {0};

    bt_app_conf.app_profile_support = RTK_BT_PROFILE_GATTS | RTK_BT_PROFILE_GATTC;
    bt_app_conf.mtu_size = 247;
    bt_app_conf.master_init_mtu_req = true;
    bt_app_conf.slave_init_mtu_req = true;
    bt_app_conf.prefer_all_phy = 0;
    bt_app_conf.prefer_tx_phy = 1 | 1 << 1 | 1 << 2;
    bt_app_conf.prefer_rx_phy = 1 | 1 << 1 | 1 << 2;
    bt_app_conf.max_tx_octets = 0x40;
    bt_app_conf.max_tx_time = 0x200;
    bt_app_conf.user_def_service = false;
    bt_app_conf.cccd_not_check = true;
    aiio_log_i("aiio_ble_init enter");
    BT_APP_PROCESS(rtk_bt_enable(&bt_app_conf));
    aiio_log_i("rtk_bt_enable");
    BT_APP_PROCESS(rtk_bt_le_gap_get_bd_addr(&bd_addr));
    aiio_log_i("rtk_bt_le_gap_get_bd_addr");
    rtk_bt_le_addr_to_str(&bd_addr, addr_str, sizeof(addr_str));
    aiio_log_i("rtk_bt_le_addr_to_str");
    BT_LOGA("BD_ADDR: %s\r\n", addr_str);

    BT_APP_PROCESS(rtk_bt_evt_register_callback(RTK_BT_COMMON_GP_GAP, bt_common_gap_callback));
    aiio_log_i("bt_common_gap_callback");
    BT_APP_PROCESS(rtk_bt_evt_register_callback(RTK_BT_LE_GP_GAP, ble_gap_app_callback));
    aiio_log_i("ble_gap_app_callback");
    BT_APP_PROCESS(rtk_bt_evt_register_callback(RTK_BT_LE_GP_GATTS, ble_gatts_app_callback));
    aiio_log_i("ble_gatts_app_callback");
    BT_APP_PROCESS(rtk_bt_evt_register_callback(RTK_BT_LE_GP_GATTC, ble_gattc_app_callback));
    aiio_log_i("ble_gattc_app_callback");

    BT_APP_PROCESS(rtk_bt_le_gap_set_appearance(RTK_BT_LE_GAP_APPEARANCE_UNKNOWN));
    aiio_log_i("rtk_bt_le_gap_set_appearance");
    rtk_bt_gattc_register_profile(BLE_CLIENT_PROFILE_ID);
    aiio_log_i("rtk_bt_gattc_register_profile");
    BT_LOGA("aiio_ble_init success\r\n");
    aiio_log_i("aiio_ble_init end");
    return AIIO_OK;
}

aiio_err_t aiio_ble_adv_start(aiio_ble_adv_param_t *param,
                              const uint8_t *ad, uint16_t ad_len,
                              const uint8_t *sd, uint16_t sd_len)
{
    rtk_bt_le_adv_param_t adv_param = {
        .interval_min = 200,
        .interval_max = 250,
        .type = RTK_BT_LE_ADV_TYPE_IND,
        .own_addr_type = RTK_BT_LE_ADDR_TYPE_PUBLIC,
        .peer_addr = {
            .type = (rtk_bt_le_addr_type_t)0,
            .addr_val = {0},
        },
        .channel_map = RTK_BT_LE_ADV_CHNL_ALL,
        .filter_policy = RTK_BT_LE_ADV_FILTER_ALLOW_SCAN_ANY_CON_ANY,
    };

    adv_param.interval_min = param->interval_min;
    adv_param.interval_max = param->interval_max;

    if (param->conn_mode != AIIO_BLE_CONN_MODE_NON)
    {
        adv_param.type = RTK_BT_LE_ADV_TYPE_IND;
    }

    rtk_bt_le_gap_set_adv_data(ad, ad_len);
    rtk_bt_le_gap_set_scan_rsp_data(sd, sd_len);
    rtk_bt_le_gap_start_adv(&adv_param);

    return AIIO_OK;
}

aiio_err_t ble_gatts_add_default_svcs(aiio_ble_default_server_t *cfg, aiio_ble_default_handle_t *handle)
{
    ble_uuid_convert(&def_srv_uuid[0], cfg->server_uuid[0]);
    ble_uuid_convert(&def_srv_tx_uuid[0], cfg->tx_char_uuid[0]);
    ble_uuid_convert(&def_srv_rx_uuid[0], cfg->rx_char_uuid[0]);

    ble_uuid_convert(&def_srv_uuid[1], cfg->server_uuid[1]);
    ble_uuid_convert(&def_srv_tx_uuid[1], cfg->tx_char_uuid[1]);
    ble_uuid_convert(&def_srv_rx_uuid[1], cfg->rx_char_uuid[1]);

    ble_def_srv_1.type = GATT_SERVICE_OVER_BLE;
    ble_def_srv_1.server_info = 0;
    ble_def_srv_1.user_data = NULL;
    ble_def_srv_1.register_status = 0;
    if (0 != rtk_bt_gatts_register_service(&ble_def_srv_1))
    {
        BT_LOGA("[ble]reg service1 fail\r\n");
        return AIIO_ERROR;
    }

    ble_def_srv_2.type = GATT_SERVICE_OVER_BLE;
    ble_def_srv_2.server_info = 0;
    ble_def_srv_2.user_data = NULL;
    ble_def_srv_2.register_status = 0;
    if (0 != rtk_bt_gatts_register_service(&ble_def_srv_2))
    {
        BT_LOGA("[ble]reg service2 fail\r\n");
        return AIIO_ERROR;
    }

    ble_def_attr_tx[0].srv_id = BLE_DEF_SRV_ID_1;
    ble_def_attr_tx[0].attr_index = BLE_DEF_SERVER_TX_INDEX;
    ble_def_attr_rx[0].srv_id = BLE_DEF_SRV_ID_1;
    ble_def_attr_rx[0].attr_index = BLE_DEF_SERVER_RX_INDEX;

    ble_def_attr_tx[1].srv_id = BLE_DEF_SRV_ID_2;
    ble_def_attr_tx[1].attr_index = BLE_DEF_SERVER_TX_INDEX;
    ble_def_attr_rx[1].srv_id = BLE_DEF_SRV_ID_2;
    ble_def_attr_rx[1].attr_index = BLE_DEF_SERVER_RX_INDEX;

    handle->tx_char_handle[0] = &ble_def_attr_tx[0];
    handle->rx_char_handle[0] = &ble_def_attr_rx[0];

    handle->tx_char_handle[1] = &ble_def_attr_tx[1];
    handle->rx_char_handle[1] = &ble_def_attr_tx[1];

    return AIIO_OK;
}

aiio_err_t aiio_ble_get_mac(uint8_t *mac)
{
    static rtk_bt_le_addr_t bd_addr = {(rtk_bt_le_addr_type_t)0, {0}};
    rtk_bt_le_addr_t empty_addr = {(rtk_bt_le_addr_type_t)0, {0}};

    if (memcmp(&bd_addr, &empty_addr, 6) == 0) {
        rtk_bt_le_gap_get_bd_addr(&bd_addr);
    }

    memcpy(mac, bd_addr.addr_val, 6);
    ble_reverse_byte(mac, 6);

    return AIIO_OK;
}

aiio_err_t aiio_ble_set_mac(const uint8_t *mac)
{
    uint8_t bt_addr[6];
    uint8_t local_bd_type = RTK_BT_LE_RAND_ADDR_STATIC;

    memcpy(bt_addr, mac, 6);
    ble_reverse_byte(bt_addr, 6);

    rtk_bt_le_gap_set_rand_addr(false, local_bd_type, bt_addr);

    return AIIO_OK;
}

aiio_err_t aiio_ble_connect(uint8_t addr_type, uint8_t *addr, uint32_t timeout)
{
    static rtk_bt_le_create_conn_param_t le_conn_param = {
        .peer_addr = {
            .type = (rtk_bt_le_addr_type_t)0,
            .addr_val = {0},
        },
        .scan_interval = 0x20,
        .scan_window = 0x20,
        .filter_policy = RTK_BT_LE_CONN_FILTER_WITHOUT_WHITELIST,
    };

    le_conn_param.conn_interval_max = ble_config_s.conn_intv.max_interval;
    le_conn_param.conn_interval_min = ble_config_s.conn_intv.min_interval;
    le_conn_param.conn_latency = ble_config_s.conn_intv.latency;
    le_conn_param.supv_timeout = ble_config_s.conn_intv.timeout;
    le_conn_param.scan_timeout = timeout;

    memcpy(le_conn_param.peer_addr.addr_val, addr, 6);
    ble_reverse_byte(le_conn_param.peer_addr.addr_val, 6);

    ble_conn_flag = 0;
    rtk_bt_le_gap_connect(&le_conn_param);
    timeout /= 10;
    while (ble_conn_flag == 0) {
        timeout--;
        if (timeout == 0) {
            rtk_bt_le_gap_connect_cancel(&le_conn_param.peer_addr);
            return AIIO_ERROR;
        }

        aiio_os_tick_dealy(aiio_os_ms2tick(10));
    }
    return AIIO_OK;
}

aiio_err_t aiio_ble_scan(const aiio_ble_scan_param_t *cfg)
{
    uint8_t scan_mode = cfg->type;
    uint16_t scan_interval = cfg->interval;
    uint16_t scan_window = cfg->window;
    rtk_bt_le_scan_param_t scan_param = {
        .type = RTK_BT_LE_SCAN_TYPE_PASSIVE,
        .interval = scan_interval,
        .window = scan_window,
        .own_addr_type = RTK_BT_LE_ADDR_TYPE_PUBLIC,
        .filter_policy = RTK_BT_LE_SCAN_FILTER_ALLOW_ALL,
        .duplicate_opt = true,
    };

    if (cfg->type == AIIO_BLE_SCAN_TYPE_ACTIVE)
    {
        scan_param.type = RTK_BT_LE_SCAN_TYPE_ACTIVE;
    }

    rtk_bt_send_cmd(RTK_BT_LE_GP_GAP, RTK_BT_LE_GAP_ACT_SET_SCAN_PARAM, (void *)&scan_param, sizeof(rtk_bt_le_scan_param_t));
    rtk_bt_le_gap_start_scan();

    return AIIO_OK;
}

aiio_err_t aiio_ble_discover(const aiio_ble_disc_param_t *param, uint16_t timeout)
{
    int ret = AIIO_ERROR;
    rtk_bt_gattc_discover_param_t disc_param = {
        .profile_id = 0,
    };

    if (param->type != AIIO_BLE_DISCOVER_CHARACTERISTIC)
    {
        return AIIO_ERROR;
    }

    ble_disc_flag = 0;

    disc_param.conn_handle = (uint16_t)param->conn;
    disc_param.profile_id = BLE_CLIENT_PROFILE_ID;
    disc_param.type = RTK_BT_GATT_DISCOVER_CHARACTERISTIC_ALL;
    disc_param.disc_char_all.start_handle = param->start_handle;
    disc_param.disc_char_all.end_handle = param->end_handle;

    if (rtk_bt_gattc_discover(&disc_param) != 0)
    {
        return AIIO_ERROR;
    }
    timeout /= 10;
    while (ble_disc_flag == 0) {
        timeout--;
        if (timeout == 0) {
            return AIIO_ERROR;
        }

        aiio_os_tick_dealy(aiio_os_ms2tick(10));
    }

    return AIIO_OK;
}
