==> Ai-Thinker-Open/aithinker_dev_open_sdk/adt/adt_os/adapter_chip/chip/port/bl616/ble/aiio_ble.c <==
#include "aiio_ble.h"
#include "aiio_os_port.h"
#include "aiio_log.h"
#include "gatt.h"
#include "conn.h"
#include "conn_internal.h"
#include "hci_core.h"
#include "hci_driver.h"
#include "btble_lib_api.h"
#include "bl616_glb.h"
#include "rfparam_adapter.h"
#define SRV_TX_INDEX 2
#define SRV_TX_CCD_INDEX 3
#define SRV_RX_INDEX 5

static int ble_notify_data(void *conn, struct bt_gatt_attr *char_val, uint8_t *data, uint16_t length)
{
    int ret;
    uint16_t mtu;
    uint16_t offset;
    uint16_t send_len;

    offset = 0;
    mtu = bt_gatt_get_mtu(conn) - 3;
    while (length > 0) {
        /* calculate send_len */
        send_len = length > mtu ? mtu : length;
        /* send data */
        ret = bt_gatt_notify(conn, char_val, data + offset, send_len);
        /* set offset */
        offset += send_len;
        length -= send_len;

        if (ret != 0) {
            break;
        }
    }

    return ret;
}

aiio_err_t aiio_ble_init(aiio_ble_mode_t mode, const aiio_ble_config_t *config)
{
    // btblecontroller_em_config();
    // /* Init rf */
    // if (0 != rfparam_init(0, NULL, 0)) {
    //     aiio_log_e("PHY RF init failed!\r\n");
    //     return 0;
    // }
    ble_stack_start();
    bt_gatt_register_mtu_callback(_ble_mtu_changed_cb);
    bt_conn_cb_register(&conn_callbacks);
    /* avoid callback infinite loop */
    conn_callbacks._next = NULL;

    memcpy(&ble_config_s, config, sizeof ble_config_s);

    if (mode == AIIO_BLE_MODE_PERIPHERAL) {
        ble_salve_init();
    } else if (mode == AIIO_BLE_MODE_CENTRAL) {
        ble_master_init();
    }

    return AIIO_OK;
}

aiio_err_t aiio_ble_adv_start(aiio_ble_adv_param_t *param,
                              const uint8_t *ad, uint16_t ad_len,
                              const uint8_t *sd, uint16_t sd_len)
{
    int ret;
    struct bt_le_adv_param adv_param;

    if (param->conn_mode == AIIO_BLE_CONN_MODE_NON &&
        param->disc_mode == AIIO_BLE_DISC_MODE_NON) {
        /* unsupport in the current SDK */
        return AIIO_ERROR;
    }

    adv_param.id = 0;
    adv_param.interval_min = param->interval_min;
    adv_param.interval_max = param->interval_max;
    adv_param.options = BT_LE_ADV_OPT_CONNECTABLE;
    if (sd == NULL) {
        adv_param.options = BT_LE_ADV_OPT_USE_IDENTITY;
    }

    if (param->conn_mode == AIIO_BLE_CONN_MODE_DIR ||
        param->conn_mode == AIIO_BLE_CONN_MODE_UND) {
        adv_param.options |= (BT_LE_ADV_OPT_CONNECTABLE | BT_LE_ADV_OPT_ONE_TIME);
    }

    set_adv_param(&adv_param);

    ret = set_ad_and_rsp_d(BT_HCI_OP_LE_SET_ADV_DATA, ad, ad_len);
    if (sd) {
        ret |= set_ad_and_rsp_d(BT_HCI_OP_LE_SET_SCAN_RSP_DATA, sd, sd_len);
    }

    if (ret != 0) {
        aiio_log_e("set adv data fail");
        return AIIO_ERROR;
    }

    if (set_adv_enable(1) != 0) {
        aiio_log_e("start adv fail");
        return AIIO_ERROR;
    }

    return AIIO_OK;
}

aiio_err_t ble_gatts_add_default_svcs(aiio_ble_default_server_t *cfg, aiio_ble_default_handle_t *handle)
{
    int ret = 0;

    ble_uuid_convert(&srv_uuid[0], cfg->server_uuid[0]);
    ble_uuid_convert(&tx_uuid[0], cfg->tx_char_uuid[0]);
    ble_uuid_convert(&rx_uuid[0], cfg->rx_char_uuid[0]);

    ble_uuid_convert(&srv_uuid[1], cfg->server_uuid[1]);
    ble_uuid_convert(&tx_uuid[1], cfg->tx_char_uuid[1]);
    ble_uuid_convert(&rx_uuid[1], cfg->rx_char_uuid[1]);

    ret = bt_gatt_service_register(&ble_server_1);
    ret |= bt_gatt_service_register(&ble_server_2);

    if (ret != 0) {
        return AIIO_ERROR;
    }

    handle->tx_char_handle[0] = (aiio_ble_att_handle_t)&salve_server_1[SRV_TX_INDEX];
    handle->rx_char_handle[0] = (aiio_ble_att_handle_t)&salve_server_1[SRV_RX_INDEX];

    handle->tx_char_handle[1] = (aiio_ble_att_handle_t)&salve_server_2[SRV_TX_INDEX];
    handle->rx_char_handle[1] = (aiio_ble_att_handle_t)&salve_server_2[SRV_RX_INDEX];

    return AIIO_OK;
}

aiio_err_t aiio_ble_get_mac(uint8_t *mac)
{
    bt_addr_le_t bt_addr;

    bt_get_local_public_address(&bt_addr);
    memcpy(mac, bt_addr.a.val, 6);
    ble_reverse_byte(mac, 6);

    return AIIO_OK;
}

aiio_err_t aiio_ble_set_mac(const uint8_t *mac)
{
    bt_addr_t bt_addr;

    memcpy(bt_addr.val, mac, 6);
    ble_reverse_byte(bt_addr.val, 6);
    bt_set_bd_addr(&bt_addr);

    return AIIO_OK;
}

aiio_err_t aiio_ble_connect(uint8_t addr_type, uint8_t *addr, uint32_t timeout)
{
    struct bt_conn *conn;
    bt_addr_le_t target_addr;
    struct bt_le_conn_param conn_param;

    ble_conn_flag = 0;

    conn_param.interval_min = ble_config_s.conn_intv.min_interval;
    conn_param.interval_max = ble_config_s.conn_intv.max_interval;
    conn_param.latency = ble_config_s.conn_intv.latency;
    conn_param.timeout = ble_config_s.conn_intv.timeout;

    target_addr.type = addr_type;
    memcpy(target_addr.a.val, addr, 6);
    ble_reverse_byte(target_addr.a.val, 6);
    conn = bt_conn_create_le(&target_addr, &conn_param);
    if (!conn) {
        return AIIO_ERROR;
    }

    timeout /= 10;
    while (ble_conn_flag == 0) {
        timeout--;
        if (timeout == 0) {
            bt_conn_disconnect(conn, BT_HCI_ERR_REMOTE_USER_TERM_CONN);
            return AIIO_ERROR;
        }

        aiio_os_tick_dealy(aiio_os_ms2tick(10));
    }

    return AIIO_OK;
}

aiio_err_t aiio_ble_scan(const aiio_ble_scan_param_t *cfg)
{
    int ret;
    struct bt_le_scan_param scan_param;

    scan_param.type = cfg->type;
    scan_param.filter_dup = BT_LE_SCAN_FILTER_DUPLICATE;
    scan_param.interval = cfg->interval;
    scan_param.window = cfg->window;

    ret = bt_le_scan_start(&scan_param, scan_device_found);
    if (ret != 0) {
        return AIIO_ERROR;
    }

    return AIIO_OK;
}

aiio_err_t aiio_ble_discover(const aiio_ble_disc_param_t *param, uint16_t timeout)
{
    int err;
    int ret = AIIO_ERROR;
    struct bt_uuid_128 uuid_128;
    static struct bt_gatt_discover_params discover_params;

    sem_disc = xSemaphoreCreateBinary();
    if (!sem_disc) {
        aiio_log_e("[BLE] sem_disc fail\r\n");
        goto _exit;
    }

    if (param->uuid) {
        ble_uuid_convert(&uuid_128, param->uuid);
    }

    discover_params.uuid = param->uuid ? &uuid_128 : NULL;
    discover_params.func = gatts_disc_func;
    discover_params.start_handle = param->start_handle;
    discover_params.end_handle = param->end_handle;
    discover_params.type = param->type;

    err = bt_gatt_discover(param->conn, &discover_params);
    if (err) {
        aiio_log_e("[BLE] discover failed(err %d)\r\n", err);
        goto _exit;
    }

    if (xSemaphoreTake(sem_disc, timeout / portTICK_PERIOD_MS) != pdTRUE) {
        printf("[BLE] disc timeout\r\n");
        goto _exit;
    }

    ret = AIIO_OK;

_exit:
    if (sem_disc) {
        /* disable interrupt? */
        vSemaphoreDelete(sem_disc);
        sem_disc = NULL;
        /* enable interrupt? */
    }

    return ret;
}
